Preparing the AAP Operator guides for EA

--- a/downstream/assemblies/platform/assembly-aap-backup.adoc
+++ b/downstream/assemblies/platform/assembly-aap-backup.adoc
@@ -15,8 +15,7 @@ We recommend taking backups before upgrading the {OperatorPlatform}.
 Take a backup regularly in case you want to restore the platform to a previous state.
 
 
-//part of 2.5 release, (AAP-22178) uncomment when publishing [gmurray]
-//include::platform/proc-aap-platform-gateway-backup.adoc[leveloffset=+1]
+include::platform/proc-aap-platform-gateway-backup.adoc[leveloffset=+1]
 
 include::platform/proc-aap-controller-backup.adoc[leveloffset=+1]
 
