--- a/downstream/modules/platform/proc-access-hub-operator-ui.adoc
+++ b/downstream/modules/platform/proc-access-hub-operator-ui.adoc
@@ -1,8 +1,8 @@
 [id="proc-access-hub-operator-ui_{context}"]
 
-= Accessing the {HubName} user interface
+= Finding the {HubName} route
 
-You can access the {HubName} interface once all pods have successfully launched.
+You can access the {HubName} through the platform gateway or through the following procedure. 
 
 .Procedure
 . Navigate to menu:Networking[Routes].
