--- a/downstream/modules/platform/proc-configuring-controller-ldap-security.adoc
+++ b/downstream/modules/platform/proc-configuring-controller-ldap-security.adoc
@@ -1,7 +1,13 @@
 [id="proc_configuring-controller-ldap-security_{context}"]
 
 = Configuring your controller LDAP security
-Use this procedure to configure LDAP security for your {ControllerName}.
+
+You can configure your LDAP security for {ControllerName} through any of the following options:
+
+* The automation controller user interface.
+//Need to add a link to Donna's Auth doc when finished.
+* The platform gateway user interface. See Authentication doc for additional steps.
+* The following procedure steps.
 
 .Procedure
 . If you do not have a `ldap_cacert_secret`, you can create one with the following command:
