--- a/downstream/modules/platform/proc-controller-ingress-options.adoc
+++ b/downstream/modules/platform/proc-controller-ingress-options.adoc
@@ -6,7 +6,11 @@ The {PlatformName} operator installation form allows you to further configure yo
 
 .Procedure
 
-. Click btn:[Advanced Configuration].
+. Go to menu:Operators[Installed Operators].
+. Locate the *Automation Controller* tab. 
+. For new instances, click btn:[Create AutomationController].
+.. For existing instances, you can edit the YAML view by clicking {MoreActionsIcon} and then btn:[Edit AutomationController].
+. Click btn:[Advanced configuration].
 . Under *Ingress type*, click the drop-down menu and select *Ingress*.
 . Under *Ingress annotations*, enter any annotations to add to the ingress.
 . Under *Ingress TLS secret*, click the drop-down menu and select a secret from the list.
