--- a/downstream/modules/platform/proc-enable-hstore-extension.adoc
+++ b/downstream/modules/platform/proc-enable-hstore-extension.adoc
@@ -2,7 +2,7 @@
 
 = Enabling the hstore extension for the {HubName} PostgreSQL database
 
-From {PlatformNameShort} {PlatformVers}, the database migration script uses `hstore` fields to store information, therefore the `hstore` extension to the {HubName} PostgreSQL database must be enabled.
+Added in {PlatformNameShort} {PlatformVers}, the database migration script uses `hstore` fields to store information, therefore the `hstore` extension to the {HubName} PostgreSQL database must be enabled.
 
 This process is automatic when using the {PlatformNameShort} installer and a managed PostgreSQL server.
 
