--- a/downstream/modules/platform/proc-provision-ocp-storage-with-readwritemany.adoc
+++ b/downstream/modules/platform/proc-provision-ocp-storage-with-readwritemany.adoc
@@ -7,6 +7,8 @@ To ensure successful installation of {OperatorPlatform}, you must provision your
 
 .Procedure
 
-. Click link:{BaseURL}/openshift_container_platform/4.10/html-single/storage/index#persistent-storage-nfs-provisioning_persistent-storage-nfs[Provisioning] to update the access mode.
+. Go to menu:Storage[PersistentVolume].
+. Click btn: Create PersistentVolume.
 . In the first step, update the `accessModes` from the default `ReadWriteOnce` to `ReadWriteMany`.
+.. See link:{BaseURL}/openshift_container_platform/4.10/html-single/storage/index#persistent-storage-nfs-provisioning_persistent-storage-nfs[Provisioning] to update the access mode. for a detailed overview.
 . Complete the additional steps in this section to create the persistent volume claim (PVC).
