--- a/downstream/modules/platform/proc-add-controller-access-token.adoc
+++ b/downstream/modules/platform/proc-add-controller-access-token.adoc
@@ -1,23 +1,19 @@
 [id="proc-add-controller-access-token_{context}"]
 
-= Connecting {OperatorResourceShort} to {ControllerName}
+= Connecting {OperatorResourceShort} to platform gateway
 
-To connect {OperatorResourceShort} with {ControllerName} you need to create a k8s secret with the connection information for your {ControllerName} instance.
+To connect {OperatorResourceShort} with platform gateway you need to create a k8s secret with the connection information for your {ControllerName} instance.
+
+NOTE: You can only create OAuth 2 Tokens for your own user through the API or UI, which means you can only configure or view tokens from your own user profile.
 
 .Procedure
-To create an OAuth2 token for your user in the {ControllerName} UI:
+To create an OAuth2 token for your user in the platform gateway UI:
 
-. In the navigation panel, select menu:Access[Users].
+. In the navigation panel, select menu:Access Management[Users].
 . Select the username you want to create a token for.
-. Click on btn:[Tokens], then click btn:[Add].
+. Select menu:Tokens[Automation Execution]
+. Click btn:[Create Token].
 . You can leave *Applications* empty. Add a description and select *Read* or *Write* for the *Scope*.
-
-Alternatively, you can create a OAuth2 token at the command-line by using the `create_oauth2_token` manage command:
-
-----
-$ controller-manage create_oauth2_token --user example_user
-New OAuth2 token for example_user: j89ia8OO79te6IAZ97L7E8bMgXCON2
-----
 
 [NOTE]
 ====
