--- a/downstream/modules/platform/proc-configuring-controller-image-pull-policy.adoc
+++ b/downstream/modules/platform/proc-configuring-controller-image-pull-policy.adoc
@@ -5,7 +5,12 @@ Use this procedure to configure the image pull policy on your {ControllerName}.
 
 .Procedure
 
-. Under *Image Pull Policy*, click on the radio button to select
+. Go to menu:Operators[Installed Operators].
+. Locate the *Automation Controller* tab. 
+. For new instances, click btn:[Create AutomationController].
+.. For existing instances, you can edit the YAML view by clicking {MoreActionsIcon} and then btn:[Edit AutomationController].
+. Click btn:[advanced Configuration].
+Under *Image Pull Policy*, click on the radio button to select
 * *Always*
 * *Never*
 * *IfNotPresent*
