--- a/downstream/modules/platform/proc-configuring-controller-route-options.adoc
+++ b/downstream/modules/platform/proc-configuring-controller-route-options.adoc
@@ -5,6 +5,10 @@
 The {PlatformName} operator installation form allows you to further configure your {ControllerName} operator route options under *Advanced configuration*.
 
 .Procedure
+. Go to menu:Operators[Installed Operators].
+. Locate the *Automation Controller* tab. 
+. For new instances, click btn:[Create AutomationController].
+.. For existing instances, you can edit the YAML view by clicking {MoreActionsIcon} and then btn:[Edit AutomationController].
 . Click btn:[Advanced configuration].
 . Under *Ingress type*, click the drop-down menu and select *Route*.
 . Under *Route DNS host*, enter a common host name that the route answers to.
