--- a/downstream/modules/platform/proc-hub-ingress-options.adoc
+++ b/downstream/modules/platform/proc-hub-ingress-options.adoc
@@ -6,6 +6,10 @@ The {PlatformName} operator installation form allows you to further configure yo
 
 .Procedure
 
+. Go to menu:Operators[Installed Operators].
+. Locate the *Automation Hub* tab. 
+. For new instances, click btn:[Create AutomationHub].
+.. For existing instances, you can edit the YAML view by clicking {MoreActionsIcon} and then btn:[Edit AutomationHub].
 . Click btn:[Advanced Configuration].
 . Under *Ingress type*, click the drop-down menu and select *Ingress*.
 . Under *Ingress annotations*, enter any annotations to add to the ingress.
