--- a/downstream/modules/platform/proc-operator-access-aap.adoc
+++ b/downstream/modules/platform/proc-operator-access-aap.adoc
@@ -20,8 +20,8 @@ To access your *AnsibleAutomationPlatform* instance:
 .. Click btn:[Subscription manifest] or btn:[Username/password].
 .. Upload your manifest or enter your username and password.
 .. Select  your subscription from the *Subscription* list.
-.. Click btn:[Next]. 
-+ This redirects you to the *Analytics* page.
+.. Click btn:[Next]. +
+This redirects you to the *Analytics* page.
 . Click btn:[Next].
 . Select the *I agree to the terms of the license agreement* checkbox.
 . Click btn:[Next].
