--- a/downstream/titles/aap-operator-installation/master.adoc
+++ b/downstream/titles/aap-operator-installation/master.adoc
@@ -21,7 +21,8 @@ include::platform/assembly-operator-install-planning.adoc[leveloffset=+1]
 
 include::platform/assembly-install-aap-operator.adoc[leveloffset=+1]
 
-// Part of the 2.5 release commenting out until live
+include::platform/assembly-installing-aap-operator-cli.adoc[leveloffset=+1]
+
 include::platform/assembly-configure-aap-operator.adoc[leveloffset=+1]
 
 include::platform/assembly-installing-controller-operator.adoc[leveloffset=+1]
@@ -32,15 +33,16 @@ include::platform/assembly-installing-hub-operator.adoc[leveloffset=+1]
 
 // include::platform/assembly-installing-controller-operator-local-db.adoc[leveloffset=+1]
 
-include::platform/assembly-installing-aap-operator-cli.adoc[leveloffset=+1]
 
-include::platform/assembly-deploy-eda-controller-on-aap-operator.adoc[leveloffset=+1]
+// [gmurray] Commenting out this module as covered in assembly-configure-aap-operator.adoc
+// include::platform/assembly-deploy-eda-controller-on-aap-operator.adoc[leveloffset=+1]
 
 include::platform/assembly-using-rhsso-operator-with-automation-hub.adoc[leveloffset=+1]
 
-include::platform/assembly-aap-migration.adoc[leveloffset=+1]
+// [gmurray] Commenting out this module as  migration is not supported for  2.5 EA. 
+// include::platform/assembly-aap-migration.adoc[leveloffset=+1]
 
-// [gmurray] Commenting out this module as part of AAP-22627. Upgrade is not supported in the initial 2.5 release. 
+// [gmurray] Commenting out this module as  upgrade is not supported for  2.5 EA. 
 // include::platform/assembly-operator-upgrade.adoc[leveloffset=+1]
 
 include::platform/assembly-operator-add-execution-nodes.adoc[leveloffset=+1]
