--- a/downstream/modules/platform/con-gw-dash-components.adoc
+++ b/downstream/modules/platform/con-gw-dash-components.adoc
@@ -4,12 +4,12 @@
 
 = {PlatformNameShort} dashboard components
 
-Quick starts:: You can learn about Ansible automation functions with guided tutorials called quick starts. In the dashboard, you can access quick starts by selecting a quick start card. From the panel displayed, click Start and complete the onscreen instructions. You can also filter quick starts by keyword and status.
-Resource status:: Indicates the status of your hosts, projects and inventories. The status indicator links to your configured hosts, projects and inventories where you can search, filter, add and modify these resources. 
-Job Activity:: You can view a summary of your current job status, filter the job status within a period of time or by job type, or click Go to Jobs to view a complete list of jobs that are currently available.
-Jobs:: You can view recent jobs that have run, or click Go to Jobs to view a complete list of jobs that are currently available, or create a new job.
-Projects: You can view recently updated projects or click Go to Projects to view a complete list of the projects that are currently available, or create a new project.
-Inventories:: You can view recently updated inventories or click Go to Inventories to view a complete list of available inventories, or create a new inventory. 
+Quick starts:: You can learn about Ansible automation functions with guided tutorials called quick starts. In the dashboard, you can access quick starts by selecting a quick start card. From the panel displayed, click btn:[Start] and complete the onscreen instructions. You can also filter quick starts by keyword and status.
+Resource status:: Indicates the status of your hosts, projects and inventories. The status indicator links to your configured hosts, projects and inventories where you can search, filter, add and modify these resources.
+Job Activity:: You can view a summary of your current job status, filter the job status within a period of time or by job type, or click *Go to Jobs* to view a complete list of jobs that are currently available.
+Jobs:: You can view recent jobs that have run, or click *View all Jobs* to view a complete list of jobs that are currently available, or create a new job.
+Projects: You can view recently updated projects or click *View all Projects* to view a complete list of the projects that are currently available, or create a new project.
+Inventories:: You can view recently updated inventories or click *View all Inventories* to view a complete list of available inventories, or create a new inventory.
 Rulebook Activations:: You can view the list of recent rulebook activations and their status, display the complete list of rulebook activations that are currently available, or create a new rulebook activation.
 Rule Audit:: You view recently fired rule audits, view rule audit records, and view rule audit data based on corresponding rulebook activation runs.
-Decision Environments:: You can view recently updated decision environments, or click Go to Decision Environments to view a complete list of available inventories, or create a new decision environment.
+Decision Environments:: You can view recently updated decision environments, or click *View all Decision Environments* to view a complete list of available inventories, or create a new decision environment.
