Fix typo in User guide sub-heading
Fix minor typos found in the user guide

https://issues.redhat.com/browse/AAP-26955

Affects `titles/controller-user-guide`

--- a/downstream/modules/platform/proc-controller-adding-new-inventory.adoc
+++ b/downstream/modules/platform/proc-controller-adding-new-inventory.adoc
@@ -10,7 +10,7 @@ Adding a new inventory involves the following components:
 * xref:proc-controller-add-source[Adding a source]
 * xref:ref-controller-view-completed-jobs[View completed jobs]
 
-Use the following procedure to create a inventory:
+Use the following procedure to create an inventory:
 
 .Procedure
 . From the navigation panel, select {MenuInfrastructureInventories}.
