--- a/downstream/titles/release-notes/topics/installer-version-table.adoc
+++ b/downstream/titles/release-notes/topics/installer-version-table.adoc
@@ -6,6 +6,14 @@
 |===
 | Installation bundle | Component versions
 
+| xref:installer-24-71[2.4-7.1] + 
+July 15, 2024  | 
+* `ansible-automation-platform-setup` 2.4-7.1
+* `ansible-core` 2.15.12
+* {ControllerNameStart} 4.5.8
+* {HubNameStart} 4.9.2
+* {EDAName} 1.0.7
+
 | xref:installer-24-7[2.4-7] + 
 June 12, 2024  | 
 * `ansible-automation-platform-setup` 2.4-7
