--- a/downstream/modules/platform/proc-aap-controller-yaml-restore.adoc
+++ b/downstream/modules/platform/proc-aap-controller-yaml-restore.adoc
@@ -50,9 +50,9 @@ kind: AutomationControllerRestore
 apiVersion: automationcontroller.ansible.com/v1beta1
 metadata:
   namespace: my-namespace
-  name: restore1
+  name: awxrestore-2024-07-15
 spec:
   deployment_name: restored_controller
-  backup_name: awxbackup-2021-04-22
+  backup_name: awxbackup-2024-07-15
   postgres_configuration_secret: 'external-restore-postgres-configuration'
 ----
