--- a/downstream/titles/builder/master.adoc
+++ b/downstream/titles/builder/master.adoc
@@ -9,7 +9,7 @@ include::attributes/attributes.adoc[]
 // Book Title
 = Creating and using execution environments
 
-Use {Builder} to create consistent and reproducible {ExecEnvName} for your {PlatformName} needs.
+Use {ExecEnvshort} builder to create consistent and reproducible containers for your {PlatformName} needs.
 
 include::{Boilerplate}[]
 
