--- a/downstream/titles/getting-started/master.adoc
+++ b/downstream/titles/getting-started/master.adoc
@@ -10,8 +10,8 @@ include::attributes/attributes.adoc[]
 
 
 // Book Title
-= Getting Started with Ansible Automation Platform
+= Getting started with Ansible Automation Platform
 
-Getting Started with Ansible Automation Platform
+Getting started with Ansible Automation Platform
 
 include::{Boilerplate}[]
