--- a/downstream/titles/upgrade/master.adoc
+++ b/downstream/titles/upgrade/master.adoc
@@ -6,7 +6,7 @@
 include::attributes/attributes.adoc[]
 
 // Book Title
-= Red Hat Ansible Automation Platform upgrade and migration guide
+= Upgrade and migration
 
 include::{Boilerplate}[]
 
