--- a/downstream/titles/controller/controller-admin-guide/master.adoc
+++ b/downstream/titles/controller/controller-admin-guide/master.adoc
@@ -9,9 +9,9 @@ include::attributes/attributes.adoc[]
 
 
 // Book Title
-= Configuring Automation Execution
+= Configuring automation execution
 
-The {ControllerName} Administration Guide describes the administration of {ControllerName} through custom scripts, management jobs, and more.
+This guide describes the administration of {ControllerName} through custom scripts, management jobs, and more.
 Written for DevOps engineers and administrators, the {ControllerName} Administration Guide assumes a basic understanding of the systems requiring management with {ControllerName}s easy-to-use graphical interface.
 
 include::{Boilerplate}[]
