--- a/downstream/titles/eda/eda-user-guide/master.adoc
+++ b/downstream/titles/eda/eda-user-guide/master.adoc
@@ -6,9 +6,9 @@
 include::attributes/attributes.adoc[]
 
 // Book Title
-= Using Automation Decisions
+= Using automation decisions
 
-{EDAcontroller} is a new way to enhance and expand automation by improving IT speed and agility while enabling consistency and resilience. 
+{EDAcontroller} is a new way to enhance and expand automation by improving IT speed and agility while enabling consistency and resilience.
 Developed by Red Hat, this feature is designed for simplicity and flexibility. 
 
 include::{Boilerplate}[]
