--- a/downstream/titles/playbooks/playbooks-getting-started/master.adoc
+++ b/downstream/titles/playbooks/playbooks-getting-started/master.adoc
@@ -8,7 +8,7 @@ include::attributes/attributes.adoc[]
 
 
 // Book Title
-= Getting started with Playbooks
+= Getting started with playbooks
 
 Thank you for your interest in {PlatformName}. {PlatformNameShort} is a commercial offering that helps teams manage complex multi-tier deployments by adding control, knowledge, and delegation to Ansible-powered environments.
 
@@ -20,7 +20,3 @@ include::playbooks/assembly-intro-to-playbooks.adoc[leveloffset=+1]
 include::playbooks/assembly-networking-playbook.adoc[leveloffset=+1]
 include::playbooks/assembly-playbook-practical-example.adoc[leveloffset=+1]
 include::playbooks/assembly-open-source-license.adoc[leveloffset=+1]
-
-
-
-
