--- a/downstream/titles/security-guide/master.adoc
+++ b/downstream/titles/security-guide/master.adoc
@@ -7,7 +7,7 @@ include::attributes/attributes.adoc[]
 
 
 // Book Title
-= Implementing Security Automation
+= Implementing security automation
 
 include::{Boilerplate}[]
 
